--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,23 @@
 version: "3"
 
 services:
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - gateway
+      - frontend
+      - backend
+      - auth-gateway
+      - notifications
+      - stock-management
+
   frontend:
     build: ./frontend
     expose:
@@ -39,8 +56,8 @@ services:
 
   gateway:
     build: ./gateway
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       - frontend
       - backend
