--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# --- Build React ---
 FROM node:22-alpine AS builder
 WORKDIR /app
 
@@ -9,9 +8,8 @@ COPY . .
 RUN npm run build
 
 FROM nginx:alpine
-
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
