--- a/microservices/notifications/Dockerfile
+++ b/microservices/notifications/Dockerfile
@@ -1,8 +1,12 @@
-FROM node:22-alpine AS builder
+FROM node:22-alpine
+
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
+EXPOSE 3001
+
+CMD ["node", "index.js"]
