--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,8 +13,8 @@ server {
     listen 443 ssl http2;
     server_name la-doue.fr www.la-doue.fr;
 
-    ssl_certificate /etc/letsencrypt/live/la-doue.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/la-doue.fr/privkey.pem;
+    ssl_certificate /etc/ssl/la-doue/fullchain.pem;
+    ssl_certificate_key /etc/ssl/la-doue/privkey.pem;
 
     # FRONT
     location / {
