--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# --- BUILD STAGE ---
 FROM node:22-alpine AS builder
 WORKDIR /app
 
@@ -7,15 +6,13 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# --- PRODUCTION STAGE ---
 FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
 
-# supprime la conf par défaut
 RUN rm /etc/nginx/conf.d/default.conf
 
-# ajoute TA conf si tu en as une
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
