--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# --- BUILD STAGE ---
 FROM node:22-alpine AS builder
 WORKDIR /app
 
@@ -6,12 +7,16 @@ RUN npm install
 COPY . .
 RUN npm run build
 
+# --- PRODUCTION STAGE ---
 FROM nginx:alpine
 
+# Remove default config
 RUN rm /etc/nginx/conf.d/default.conf
 
+# Copy your Nginx config
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
+# Copy React build
 COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
