--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,36 +18,65 @@ server {
 
     # FRONT
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend:80/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # BACKEND API
     location /api/ {
-        proxy_pass http://backend:80;
+        proxy_pass http://backend:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # AUTH
     location /auth/ {
-        proxy_pass http://auth-gateway:80;
+        proxy_pass http://auth-gateway:4001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # NOTIFICATIONS
     location /notifications/ {
-        proxy_pass http://notifications:80;
+        proxy_pass http://notifications:3001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # STOCK
     location /stock/ {
-        proxy_pass http://stock-management:80;
+        proxy_pass http://stock-management:3002/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # GATEWAY (update stock)
     location /update-stock {
-        proxy_pass http://gateway:80/update-stock;
+        proxy_pass http://gateway:8080/update-stock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # GATEWAY notify
     location /notify {
-        proxy_pass http://gateway:80/notify;
+        proxy_pass http://gateway:8080/notify;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+
 }
