--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,15 +2,12 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# Installer les dépendances
 COPY package*.json ./
 RUN npm install --production
 
-# Copier le code
 COPY . .
 
-# Exposer le port (5000 ou autre selon ton backend)
-EXPOSE 5000
+# Render exige que le port interne soit 10000
+EXPOSE 10000
 
-# Lancer le serveur
 CMD ["node", "server.js"]
