--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,20 @@
-FROM node:22-alpine
-
+# --- BUILD STAGE ---
+FROM node:22-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --production
-
+RUN npm install
 COPY . .
+RUN npm run build
 
-EXPOSE 10000
+# --- PRODUCTION STAGE ---
+FROM nginx:alpine
 
-CMD ["node", "server.js"]
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
